--- a/scss/abstract/_listas.scss
+++ b/scss/abstract/_listas.scss
@@ -8,9 +8,9 @@ $color:
 rgb(77, 84, 90);
 
 $font:
-'Cormorant Upright' serif,
-'Josefin Sans' sans-serif,
-'Roboto Condensed' sans-serif;
+'Cormorant Upright', serif,
+'Josefin Sans', sans-serif,
+'Roboto Condensed', sans-serif;
 
 $f-style:
 italic;
@@ -18,5 +18,8 @@ italic;
 $sizes:
 19px,
 100%,
-706px;
+706px,
+600px,
+13px,
+110px;
 
