--- a/scss/abstract/_extend.scss
+++ b/scss/abstract/_extend.scss
@@ -19,3 +19,13 @@
     align-items: center;
     position: relative;
 }
+
+%TextBox{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 20px;
+    color: #fff; 
+}
