--- a/scss/componentes/_index.scss
+++ b/scss/componentes/_index.scss
@@ -16,41 +16,29 @@
 //responsive
 
 .responsive{
-    @extend %indexresponsive;
+    @extend %indexresponsive
 }
 
 .img-celu{
-    display: none;
-    height: 600px;
-    width: 100%;
+    display: map-get($dpl, n);
+    height: nth($sizes, 4);
+    width: nth($sizes, 2);
 }
 
 @media (max-width:576px){
     .img-celu{
-        display: block;
+        display: map-get($dpl, b);
     }
 }
 
 .h1-responsive{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: rgba(0, 0, 0, 0.5);
-    padding: 20px;
-    color: #fff; 
+    @extend %TextBox;
     font-size: 17px !important;
 }
 
 @media (min-width:576px){
     .h1-responsive{
-        display: none;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        background-color: rgba(0, 0, 0, 0.5);
-        padding: 20px;
-        color: #fff; 
+        display: map-get($dpl, n);
+        @extend %TextBox;
     }
 }
