--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,470 @@
-/* Error: Undefined mixin.
- *    ,
- * 60 |         @include FooterDSP (flex, column, center, center, center);
- *    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- *    '
- *   scss\componentes\_footer.scss 60:9  @import
- *   scss\style.scss 7:9                 root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: "Error: Undefined mixin.\a    \2577 \a 60 \2502          @include FooterDSP (flex, column, center, center, center);\d\a    \2502          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\a    \2575 \a   scss\\componentes\\_footer.scss 60:9  @import\a   scss\\style.scss 7:9                 root stylesheet";
+.div-icons {
+  display: flex;
+  align-items: center;
+  justify-content: end;
 }
+
+.footer-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1fr;
+  grid-template-areas: "navegacion pagos contacto map";
+  justify-items: center;
+  align-items: center;
+}
+
+.responsive {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+
+.text-sucursal, .ul-menu, .h1-responsive {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 20px;
+  color: #fff;
+}
+
+.div-promo {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  grid-template-areas: "img1 lista1 texto" "img2 lista2 texto" "img3 lista3 texto" "img4 lista4 texto";
+  justify-items: end;
+  align-items: center;
+  grid-gap: 10px;
+  background-color: rgb(77, 84, 90);
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  scroll-behavior: smooth;
+  line-height: 1;
+}
+
+ol, ul {
+  padding-left: 0 !important;
+}
+
+.container-fluid {
+  --bs-gutter-x: 0 !important;
+  --bs-gutter-y: 0;
+  width: 100%;
+  padding-right: calc(var(--bs-gutter-x) * 0.5);
+  padding-left: calc(var(--bs-gutter-x) * 0.5);
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.div-icons {
+  background-image: url(https://thumbs.dreamstime.com/b/burgers-seamless-pattern-background-hand-drawn-hamburger-french-fries-fast-food-junk-american-vector-illustration-restaurant-143495721.jpg);
+  height: 60px;
+  padding-right: 10px;
+}
+.div-icons div a img {
+  height: 40px;
+  width: 40px;
+  border-radius: 30px;
+}
+
+.logo-nav {
+  width: 45px;
+  height: 45px;
+}
+
+.nav-yo {
+  background-color: #DEA450;
+  padding-left: 20px !important;
+  padding-right: 20px !important;
+}
+
+.nav-title {
+  font-family: "Roboto Condensed", sans-serif;
+  font-style: italic;
+}
+
+.div-flex {
+  justify-content: end;
+}
+
+ul li {
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 20px;
+}
+
+.nav-text-ro {
+  color: #9b461f;
+  padding: 10px;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 1000;
+  font-family: "Josefin Sans", sans-serif;
+  font-style: italic;
+}
+
+.footer-container {
+  height: 150px;
+  width: 100%;
+  background-color: #000000;
+  gap: 1px;
+}
+.footer-container div {
+  margin: 20px 50px 0px 50px;
+  color: #ffffff;
+}
+.footer-container div ul {
+  list-style-type: none;
+}
+
+.footer-nav {
+  grid-area: navegacion;
+  height: 110px;
+}
+.footer-nav li a {
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.h4-footer {
+  font-size: 20px;
+}
+
+.mi-lista li {
+  font-size: 13px;
+}
+
+.pagos {
+  grid-area: pagos;
+  height: 110px;
+}
+
+.contacto {
+  grid-area: contacto;
+  height: 110px;
+}
+.contacto p {
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 13px;
+}
+
+.map {
+  grid-area: map;
+  height: 110px;
+}
+
+@media (max-width: 576px) {
+  .footer-container {
+    height: 250px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+    justify-content: center;
+  }
+  .pagos {
+    display: none;
+  }
+  .map {
+    display: none;
+  }
+  .footer-nav ul {
+    justify-items: center;
+    align-items: center;
+  }
+  .footer-nav ul li {
+    padding: 2px;
+  }
+  ol, ul {
+    display: flex;
+    flex-direction: column;
+  }
+  .footer-container div {
+    margin: 0px 50px 0px 50px;
+    color: #ffffff;
+  }
+  .contacto {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+  }
+}
+.div-size {
+  height: 706px;
+}
+
+.img-size {
+  width: 100%;
+  height: 706px;
+}
+
+@media (max-width: 576px) {
+  .display-carrusel {
+    display: none;
+  }
+}
+.img-celu {
+  display: none;
+  height: 600px;
+  width: 100%;
+}
+
+@media (max-width: 576px) {
+  .img-celu {
+    display: block;
+  }
+}
+.h1-responsive {
+  font-size: 17px !important;
+}
+
+@media (min-width: 576px) {
+  .h1-responsive {
+    display: none;
+  }
+}
+.main-menu {
+  display: flex;
+  justify-content: center;
+  min-height: 68.9vh;
+}
+
+.menu {
+  display: flex;
+  align-items: center;
+  position: relative;
+  height: 100%;
+  width: 100%;
+}
+
+.img-menu {
+  height: 706px;
+  width: 100%;
+}
+
+.ul-menu li {
+  list-style-type: none;
+  text-align: center;
+  font-family: "Josefin Sans", sans-serif;
+  font-style: italic;
+  font-size: large;
+}
+
+.menu ul li p {
+  font-style: normal;
+  text-align: center;
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: large;
+}
+
+.div-nosotros {
+  display: flex;
+  height: 706px;
+  width: 100%;
+  background-color: rgb(77, 84, 90);
+}
+
+.historia {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.historia h4 {
+  font-family: "Cormorant Upright", serif;
+  font-style: italic;
+  font-weight: 600;
+  font-size: 30px;
+}
+.historia p {
+  font-family: "Cormorant Upright", serif;
+  font-weight: 300;
+  font-size: 20px;
+}
+
+.nosotros-img {
+  display: flex;
+  width: 40%;
+  justify-content: center;
+  align-items: center;
+}
+.nosotros-img img {
+  height: 60%;
+  width: 90%;
+}
+
+.img-1 {
+  grid-area: img1;
+  height: 100%;
+}
+
+.img-2 {
+  grid-area: img2;
+  height: 100%;
+}
+
+.img-3 {
+  grid-area: img3;
+  height: 100%;
+}
+
+.img-4 {
+  grid-area: img4;
+  height: 100%;
+}
+
+.lista-1 {
+  grid-area: lista1;
+  justify-self: flex-start;
+}
+
+.lista-2 {
+  grid-area: lista2;
+  justify-self: flex-start;
+}
+
+.lista-3 {
+  grid-area: lista3;
+  justify-self: flex-start;
+  height: 158.98px;
+}
+
+.lista-4 {
+  grid-area: lista4;
+  justify-self: flex-start;
+}
+
+.texto {
+  grid-area: texto;
+  align-self: flex-start;
+  margin-top: 30px;
+  margin-right: 50px;
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  background-color: #fff;
+  padding: 10px;
+}
+
+.no-rem {
+  margin-bottom: 0rem !important;
+}
+
+.promo-ul {
+  text-decoration: none;
+  list-style-type: none;
+  margin-bottom: 0px !important;
+  height: 100%;
+  margin: 10px;
+}
+
+.h6-lista {
+  margin-left: 350px;
+  padding: 30px;
+}
+
+.p-promos {
+  width: 300px;
+}
+
+.promo-img {
+  height: 80% !important;
+  margin: 10px;
+}
+
+.carrusel-sucursal {
+  position: relative;
+}
+
+.text-sucursal {
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 600;
+  font-size: 30px;
+}
+
+.div-mobile-sucursal {
+  display: none;
+}
+
+@media (max-width: 576px) {
+  .carrusel-sucursal {
+    display: none;
+  }
+  .text-sucursal {
+    display: none;
+  }
+  .div-mobile-sucursal {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+    background-image: url(../img/sucursal\ 1.jpg);
+    width: 100%;
+    height: 600px;
+    position: relative;
+    overflow: hidden;
+  }
+  .img-mobile-sucursal {
+    width: 60%;
+    height: 60%;
+  }
+  .h1-mobile-sucursal {
+    margin-top: 15px;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 25px;
+    color: #ffffff;
+    font-family: "Josefin Sans", sans-serif;
+    font-style: italic;
+    font-weight: 800;
+  }
+  .h2-mobile-sucursal {
+    font-family: "Josefin Sans", sans-serif;
+    font-style: italic;
+    font-weight: 600;
+  }
+  .p-sucursal {
+    font-family: "Josefin Sans", sans-serif;
+    font-size: 20px;
+  }
+  .container {
+    max-width: 100%;
+    padding: 25px;
+  }
+  .header {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  .header h1 {
+    font-size: 25px;
+  }
+  .content {
+    display: flex;
+    flex-direction: column;
+  }
+  .address {
+    background-color: #f0f0f0;
+    padding: 25px;
+    margin-bottom: 20px;
+  }
+  .address h2 {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+  .div-map-sucursal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+/*# sourceMappingURL=style.css.map */
