--- a/scss/abstract/_extend.scss
+++ b/scss/abstract/_extend.scss
@@ -29,3 +29,24 @@
     padding: 20px;
     color: #fff; 
 }
+
+%FlexColumnFooter{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+}
+
+%gridpromo{
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-areas: "img1 lista1 texto" "img2 lista2 texto" 
+    "img3 lista3 texto" "img4 lista4 texto";
+    justify-items: end;
+    align-items: center;
+    grid-gap: 10px;
+    background-color: rgb(77, 84, 90);
+}
