--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,7 @@
 @import './abstract/listas';
 @import './abstract/maps';
 @import './abstract/extend';
-
+@import './abstract/mixin';
 
 @import './componentes/header';
 @import './componentes/footer';
