--- a/css/style.css
+++ b/css/style.css
@@ -13,14 +13,7 @@
   align-items: center;
 }
 
-.responsive {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: relative;
-}
-
-.text-sucursal, .ul-menu, .h1-responsive {
+.text-sucursal {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -39,8 +32,8 @@
   grid-template-areas: "img1 lista1 texto" "img2 lista2 texto" "img3 lista3 texto" "img4 lista4 texto";
   justify-items: end;
   align-items: center;
+  justify-content: center;
   grid-gap: 10px;
-  background-color: rgb(77, 84, 90);
 }
 
 * {
@@ -75,6 +68,11 @@ ol, ul {
   border-radius: 30px;
 }
 
+.div-icons div a img:hover {
+  transform: scale(1.2);
+  transition: transform 0.3s;
+}
+
 .logo-nav {
   width: 45px;
   height: 45px;
@@ -97,7 +95,7 @@ ol, ul {
 
 ul li {
   font-family: "Roboto Condensed", sans-serif;
-  font-size: 20px;
+  font-size: 30px;
 }
 
 .nav-text-ro {
@@ -108,6 +106,32 @@ ul li {
   font-weight: 1000;
   font-family: "Josefin Sans", sans-serif;
   font-style: italic;
+  display: inline-block;
+  position: relative;
+  padding: 10px 20px;
+  color: #9b461f;
+  background-color: #DEA450;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.nav-text-ro::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background-color: #9b461f;
+  transition: width 0.3s;
+}
+
+.nav-text-ro:hover {
+  background-color: #9b461f;
+  color: #DEA450;
+}
+
+.hover-animation:hover::before {
+  width: 100%;
 }
 
 .footer-container {
@@ -207,40 +231,174 @@ ul li {
   height: 706px;
 }
 
+.display-carrusel {
+  position: relative;
+}
+
+.contenedor-index {
+  display: flex;
+}
+
+.div-index {
+  width: 60%;
+}
+.div-index p {
+  line-height: 1.5;
+  font-family: "Agdasima", sans-serif;
+  font-size: 21px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.div-index-cocina {
+  width: 60%;
+}
+.div-index-cocina p {
+  line-height: 1.5;
+  font-family: "Agdasima", sans-serif;
+  font-size: 21px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.img-index-logo {
+  width: 40%;
+  height: 280px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.img-index-logo img {
+  width: 300px;
+  height: 300px;
+}
+
+.sub-index {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Agdasima", sans-serif;
+  font-style: italic;
+  font-weight: 700;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.titulo-index {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Agdasima", sans-serif;
+  font-style: italic;
+  font-weight: 700;
+  margin-top: 15px;
+}
+
+.img-index-cocina {
+  width: 40%;
+  height: 280px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.img-index-cocina img {
+  width: 80%;
+  height: 250px;
+}
+
+.main-index {
+  background: rgb(155, 70, 31);
+  background: -moz-linear-gradient(0deg, rgb(155, 70, 31) 0%, rgb(222, 164, 80) 80%, rgba(255, 255, 255, 0.5746673669) 100%);
+  background: -webkit-linear-gradient(0deg, rgb(155, 70, 31) 0%, rgb(222, 164, 80) 80%, rgba(255, 255, 255, 0.5746673669) 100%);
+  background: linear-gradient(0deg, rgb(155, 70, 31) 0%, rgb(222, 164, 80) 80%, rgba(255, 255, 255, 0.5746673669) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#9b461f",endColorstr="#ffffff",GradientType=1);
+}
+
 @media (max-width: 576px) {
   .display-carrusel {
     display: none;
   }
-}
-.img-celu {
-  display: none;
-  height: 600px;
-  width: 100%;
-}
-
-@media (max-width: 576px) {
-  .img-celu {
-    display: block;
-  }
-}
-.h1-responsive {
-  font-size: 17px !important;
-}
-
-@media (min-width: 576px) {
-  .h1-responsive {
+  .img-index-cocina {
     display: none;
+  }
+  .div-index-cocina {
+    display: none;
+  }
+  hr {
+    display: none;
+  }
+  .contenedor-index {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+  }
+  .div-index {
+    width: 100%;
+  }
+  .div-index p {
+    line-height: 1.5;
+    font-family: "Agdasima", sans-serif;
+    font-size: 21px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .div-index-cocina {
+    width: 90%;
+  }
+  .div-index-cocina p {
+    line-height: 1.5;
+    font-family: "Agdasima", sans-serif;
+    font-size: 21px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .img-index-logo {
+    width: 100%;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .img-index-logo img {
+    width: 150px;
+    height: 150px;
+  }
+  .main-index {
+    background: rgb(155, 70, 31);
+    background: -moz-linear-gradient(0deg, rgb(155, 70, 31) 0%, rgb(222, 164, 80) 80%, rgba(255, 255, 255, 0.5746673669) 100%);
+    background: -webkit-linear-gradient(0deg, rgb(155, 70, 31) 0%, rgb(222, 164, 80) 80%, rgba(255, 255, 255, 0.5746673669) 100%);
+    background: linear-gradient(0deg, rgb(155, 70, 31) 0%, rgb(222, 164, 80) 80%, rgba(255, 255, 255, 0.5746673669) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#9b461f",endColorstr="#ffffff",GradientType=1);
   }
 }
 .main-menu {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   min-height: 68.9vh;
+  background-image: url(../img/papitas.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.h1menu {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 15px;
+  margin-bottom: 30px;
+  font-family: "Josefin Sans", sans-serif;
+  font-style: italic;
+  font-weight: 700;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #ffffff;
 }
 
 .menu {
   display: flex;
   align-items: center;
+  justify-content: center;
   position: relative;
   height: 100%;
   width: 100%;
@@ -251,12 +409,19 @@ ul li {
   width: 100%;
 }
 
+.ul-menu {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
 .ul-menu li {
   list-style-type: none;
   text-align: center;
   font-family: "Josefin Sans", sans-serif;
   font-style: italic;
-  font-size: large;
+  font-size: 20px;
+  width: 100%;
+  height: 49.1px;
+  color: #ffffff;
 }
 
 .menu ul li p {
@@ -266,11 +431,103 @@ ul li {
   font-size: large;
 }
 
+@media (max-width: 576px) {
+  .main-menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 68.9vh;
+  }
+  .menu {
+    display: flex;
+    align-items: center;
+    position: relative;
+    height: 100%;
+    width: 100%;
+    background: rgb(155, 70, 31);
+    background: -moz-linear-gradient(0deg, rgb(155, 70, 31) 0%, rgb(222, 164, 80) 80%, rgba(255, 255, 255, 0.5746673669) 100%);
+    background: -webkit-linear-gradient(0deg, rgb(155, 70, 31) 0%, rgb(222, 164, 80) 80%, rgba(255, 255, 255, 0.5746673669) 100%);
+    background: linear-gradient(0deg, rgb(155, 70, 31) 0%, rgb(222, 164, 80) 80%, rgba(255, 255, 255, 0.5746673669) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#9b461f",endColorstr="#ffffff",GradientType=1);
+  }
+  .menu ul {
+    width: 90%;
+  }
+  .menu ul li {
+    list-style-type: none;
+    text-align: center;
+    font-family: "Josefin Sans", sans-serif;
+    font-style: italic;
+    font-size: large;
+  }
+  .menu ul li p {
+    font-style: normal;
+    text-align: center;
+    font-family: "Roboto Condensed", sans-serif;
+    font-size: 15px;
+  }
+  .ul-menu {
+    background-color: rgba(0, 0, 0, 0);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .ul-menu li {
+    list-style-type: none;
+    text-align: center;
+    font-family: "Josefin Sans", sans-serif;
+    font-style: italic;
+    font-size: 20px;
+    width: 100%;
+    height: 50px;
+    color: #000000;
+  }
+  .img-menu {
+    visibility: hidden;
+  }
+  .h1menu {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 15px;
+    margin-bottom: 30px;
+    font-family: "Josefin Sans", sans-serif;
+    font-style: italic;
+    font-weight: 700;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #ffffff;
+  }
+  .main-menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 68.9vh;
+    background-image: none;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .h1menu {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 15px;
+    margin-bottom: 30px;
+    font-family: "Josefin Sans", sans-serif;
+    font-style: italic;
+    font-weight: 700;
+    background-color: rgba(0, 0, 0, 0);
+    color: #000000;
+  }
+}
 .div-nosotros {
   display: flex;
   height: 706px;
   width: 100%;
-  background-color: rgb(77, 84, 90);
+  background: rgb(155, 70, 31);
+  background: -moz-linear-gradient(0deg, rgb(155, 70, 31) 0%, rgb(222, 164, 80) 80%, rgba(255, 255, 255, 0.5746673669) 100%);
+  background: -webkit-linear-gradient(0deg, rgb(155, 70, 31) 0%, rgb(222, 164, 80) 80%, rgba(255, 255, 255, 0.5746673669) 100%);
+  background: linear-gradient(0deg, rgb(155, 70, 31) 0%, rgb(222, 164, 80) 80%, rgba(255, 255, 255, 0.5746673669) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#9b461f",endColorstr="#ffffff",GradientType=1);
 }
 
 .historia {
@@ -285,11 +542,14 @@ ul li {
   font-style: italic;
   font-weight: 600;
   font-size: 30px;
+  color: rgb(0, 0, 0);
 }
 .historia p {
   font-family: "Cormorant Upright", serif;
   font-weight: 300;
   font-size: 20px;
+  color: rgb(0, 0, 0);
+  padding-left: 20px;
 }
 
 .nosotros-img {
@@ -303,45 +563,142 @@ ul li {
   width: 90%;
 }
 
+@media (max-width: 576px) {
+  .div-nosotros {
+    display: flex;
+    height: 706px;
+    width: 100%;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    background: rgb(155, 70, 31);
+    background: -moz-linear-gradient(0deg, rgb(155, 70, 31) 0%, rgb(222, 164, 80) 80%, rgba(255, 255, 255, 0.5746673669) 100%);
+    background: -webkit-linear-gradient(0deg, rgb(155, 70, 31) 0%, rgb(222, 164, 80) 80%, rgba(255, 255, 255, 0.5746673669) 100%);
+    background: linear-gradient(0deg, rgb(155, 70, 31) 0%, rgb(222, 164, 80) 80%, rgba(255, 255, 255, 0.5746673669) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#9b461f",endColorstr="#ffffff",GradientType=1);
+  }
+  .historia {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .historia h4 {
+    font-family: "Cormorant Upright", serif;
+    font-style: italic;
+    font-weight: 600;
+    font-size: 30px;
+    color: rgb(0, 0, 0);
+  }
+  .historia p {
+    font-family: "Cormorant Upright", serif;
+    font-weight: 300;
+    font-size: 20px;
+    color: rgb(0, 0, 0);
+    padding-left: 20px;
+  }
+  .nosotros-img {
+    display: flex;
+    width: 60%;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+  }
+  .nosotros-img img {
+    height: 100%;
+    width: 100%;
+  }
+}
+.div-promo {
+  background: rgb(155, 70, 31);
+  background: -moz-linear-gradient(0deg, rgb(155, 70, 31) 0%, rgb(222, 164, 80) 80%, rgba(255, 255, 255, 0.5746673669) 100%);
+  background: -webkit-linear-gradient(0deg, rgb(155, 70, 31) 0%, rgb(222, 164, 80) 80%, rgba(255, 255, 255, 0.5746673669) 100%);
+  background: linear-gradient(0deg, rgb(155, 70, 31) 0%, rgb(222, 164, 80) 80%, rgba(255, 255, 255, 0.5746673669) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#9b461f",endColorstr="#ffffff",GradientType=1);
+}
+
 .img-1 {
   grid-area: img1;
+  height: 200px;
+  width: 300px;
+  overflow: hidden;
+  object-fit: cover;
+  margin-top: 30px;
+}
+.img-1 img {
+  width: 100%;
   height: 100%;
 }
 
 .img-2 {
   grid-area: img2;
+  height: 200px;
+  width: 300px;
+  overflow: hidden;
+  object-fit: cover;
+  margin-top: 30px;
+}
+.img-2 img {
+  width: 100%;
   height: 100%;
 }
 
 .img-3 {
   grid-area: img3;
+  height: 200px;
+  width: 300px;
+  overflow: hidden;
+  object-fit: cover;
+  margin-top: 30px;
+}
+.img-3 img {
+  width: 100%;
   height: 100%;
 }
 
 .img-4 {
   grid-area: img4;
+  height: 200px;
+  width: 300px;
+  overflow: hidden;
+  object-fit: cover;
+  margin-top: 30px;
+}
+.img-4 img {
+  width: 100%;
   height: 100%;
 }
 
 .lista-1 {
   grid-area: lista1;
   justify-self: flex-start;
+  border: solid 2px rgb(0, 0, 0);
+  width: 90%;
 }
 
 .lista-2 {
   grid-area: lista2;
   justify-self: flex-start;
+  border: solid 2px rgb(0, 0, 0);
+  width: 90%;
 }
 
 .lista-3 {
   grid-area: lista3;
   justify-self: flex-start;
   height: 158.98px;
+  border: solid 2px rgb(0, 0, 0);
+  width: 90%;
 }
 
 .lista-4 {
   grid-area: lista4;
   justify-self: flex-start;
+  border: solid 2px rgb(0, 0, 0);
+  width: 90%;
 }
 
 .texto {
@@ -352,8 +709,15 @@ ul li {
   font-family: "Josefin Sans", sans-serif;
   font-size: 20px;
   font-weight: 600;
-  background-color: #fff;
+  background-color: rgb(0, 0, 0);
   padding: 10px;
+  color: #DEA450;
+}
+
+.h1-promo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .no-rem {
@@ -366,11 +730,14 @@ ul li {
   margin-bottom: 0px !important;
   height: 100%;
   margin: 10px;
+  color: rgb(0, 0, 0);
 }
 
 .h6-lista {
-  margin-left: 350px;
-  padding: 30px;
+  display: flex;
+  padding: 20px;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .p-promos {
@@ -382,12 +749,95 @@ ul li {
   margin: 10px;
 }
 
+@media (max-width: 576px) {
+  .img-1, .img-2, .img-3, .img-4 {
+    display: none;
+  }
+  .div-promo {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    justify-content: center;
+    grid-gap: 10px;
+    background: rgb(155, 70, 31);
+    background: -moz-linear-gradient(0deg, rgb(155, 70, 31) 0%, rgb(222, 164, 80) 80%, rgba(255, 255, 255, 0.5746673669) 100%);
+    background: -webkit-linear-gradient(0deg, rgb(155, 70, 31) 0%, rgb(222, 164, 80) 80%, rgba(255, 255, 255, 0.5746673669) 100%);
+    background: linear-gradient(0deg, rgb(155, 70, 31) 0%, rgb(222, 164, 80) 80%, rgba(255, 255, 255, 0.5746673669) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#9b461f",endColorstr="#ffffff",GradientType=1);
+    flex-wrap: wrap;
+  }
+  .lista-1 {
+    grid-area: lista1;
+    justify-self: flex-start;
+    border: solid 1px rgb(0, 0, 0);
+    margin: 10px;
+  }
+  .lista-2 {
+    grid-area: lista2;
+    justify-self: flex-start;
+    border: solid 1px rgb(0, 0, 0);
+    margin: 10px;
+  }
+  .lista-3 {
+    grid-area: lista3;
+    justify-self: flex-start;
+    height: 158.98px;
+    border: solid 1px rgb(0, 0, 0);
+    margin: 10px;
+  }
+  .lista-4 {
+    grid-area: lista4;
+    justify-self: flex-start;
+    border: solid 1px rgb(0, 0, 0);
+    margin: 10px;
+  }
+  .texto {
+    grid-area: texto;
+    align-self: flex-start;
+    margin-top: 0;
+    margin-right: 0;
+    font-family: "Josefin Sans", sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+    background-color: rgb(0, 0, 0);
+    padding: 10px;
+    margin: 10px;
+    color: #DEA450;
+  }
+  .no-rem {
+    margin-bottom: 0rem !important;
+  }
+  .promo-ul {
+    text-decoration: none;
+    list-style-type: none;
+    margin-bottom: 0px !important;
+    height: 100%;
+    margin: 10px;
+    color: rgb(0, 0, 0);
+  }
+  .h6-lista {
+    padding: 20px;
+    font-size: 15px;
+  }
+  .p-promos {
+    width: 300px;
+    font-size: 15px;
+  }
+  .promo-img {
+    height: 80% !important;
+    margin: 10px;
+    font-size: 15px;
+  }
+}
 .carrusel-sucursal {
   position: relative;
 }
 
 .text-sucursal {
   font-family: "Josefin Sans", sans-serif;
+  font-style: italic;
   font-weight: 600;
   font-size: 30px;
 }
