--- a/scss/abstract/_extend.scss
+++ b/scss/abstract/_extend.scss
@@ -47,6 +47,23 @@
     "img3 lista3 texto" "img4 lista4 texto";
     justify-items: end;
     align-items: center;
+    justify-content: center;
     grid-gap: 10px;
-    background-color: rgb(77, 84, 90);
+}
+
+%gradient{
+    background: rgb(0,0,0);
+    background: -moz-linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(222,164,80,1) 100%, rgba(155,70,31,1) 100%);
+    background: -webkit-linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(222,164,80,1) 100%, rgba(155,70,31,1) 100%);
+    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(222,164,80,1) 100%, rgba(155,70,31,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#9b461f",GradientType=1);
+}
+
+%gradient-img{
+    background: rgb(0,0,0);
+    background: -moz-linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(102,102,102,1) 40%, rgba(255,255,255,0.5746673669467788) 100%, rgba(255,255,255,0) 100%);
+    background: -webkit-linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(102,102,102,1) 40%, rgba(255,255,255,0.5746673669467788) 100%, rgba(255,255,255,0) 100%);
+    background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(102,102,102,1) 40%, rgba(255,255,255,0.5746673669467788) 100%, rgba(255,255,255,0) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#ffffff",GradientType=1);  
+    opacity: 1; 
 }
