--- a/scss/componentes/_header.scss
+++ b/scss/componentes/_header.scss
@@ -35,6 +35,18 @@ ol, ul {
     }
 }
 
+.div-icons{
+    div{
+        a{
+            img:hover{
+                transform: scale(1.2);
+                transition: transform 0.3s;
+            }
+        }
+    }
+}
+
+
 .logo-nav{
     width: map-get($navbar, logo-h);
     height: map-get($navbar, logo-w);
@@ -58,7 +70,7 @@ ol, ul {
 ul{
     li{
         font-family: 'Roboto Condensed', sans-serif;
-        font-size: nth($sizes , 1);
+        font-size: 30px;
     }
 }
 
@@ -70,4 +82,31 @@ ul{
     font-weight: map-get($navbar, f-w);
     font-family: 'Josefin Sans', sans-serif;
     font-style: nth($f-style, 1);
+    display: inline-block;
+    position: relative;
+    padding: 10px 20px;
+    color: #9b461f; 
+    background-color: #DEA450; 
+    transition: background-color 0.3s, color 0.3s; 
+}
+
+.nav-text-ro::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background-color: #9b461f;
+    transition: width 0.3s;
+}
+
+
+.nav-text-ro:hover{
+    background-color: #9b461f;
+    color: #DEA450;
+}
+
+.hover-animation:hover::before {
+    width: 100%;
 }
