--- a/scss/componentes/_index.scss
+++ b/scss/componentes/_index.scss
@@ -1,3 +1,4 @@
+
 .div-size{
     height: nth($sizes, 3);
 }
@@ -6,39 +7,154 @@
     width: nth($sizes, 2);
     height: nth($sizes, 3);
 }
+.display-carrusel{
+  
+    position: relative;
+}
+
+.contenedor-index{
+    display: flex;
+}
+
+.div-index{
+    width: 60%;
+    p{
+        line-height: 1.5;
+        font-family: 'Agdasima', sans-serif;
+        font-size: 21px;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+}
+
+.div-index-cocina{
+    width: 60%;
+    p{
+        line-height: 1.5;
+        font-family: 'Agdasima', sans-serif;
+        font-size: 21px;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+}
+
+.img-index-logo{
+    width: 40%;
+    height: 280px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    img{
+        width: 300px;
+        height: 300px;
+    }
+}
+
+.sub-index{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Agdasima', sans-serif;
+    font-style: italic;
+    font-weight: 700;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+.titulo-index{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Agdasima', sans-serif;
+    font-style: italic;
+    font-weight: 700;
+    margin-top: 15px;
+}
+.img-index-cocina{
+    width: 40%;
+    height: 280px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    img{
+        width: 80%;
+        height: 250px;
+    }
+}
+
+.main-index{
+    background: rgb(155,70,31);
+    background: -moz-linear-gradient(0deg, rgba(155,70,31,1) 0%, rgba(222,164,80,1) 80%, rgba(255,255,255,0.5746673669467788) 100%);
+    background: -webkit-linear-gradient(0deg, rgba(155,70,31,1) 0%, rgba(222,164,80,1) 80%, rgba(255,255,255,0.5746673669467788) 100%);
+    background: linear-gradient(0deg, rgba(155,70,31,1) 0%, rgba(222,164,80,1) 80%, rgba(255,255,255,0.5746673669467788) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#9b461f",endColorstr="#ffffff",GradientType=1);
+}
 
 @media (max-width: 576px){
     .display-carrusel{
         display: map-get($dpl, n)
     }
-}
 
-//responsive
 
-.responsive{
-    @extend %indexresponsive
-}
-
-.img-celu{
-    display: map-get($dpl, n);
-    height: nth($sizes, 4);
-    width: nth($sizes, 2);
-}
-
-@media (max-width:576px){
-    .img-celu{
-        display: map-get($dpl, b);
+    .img-index-cocina{
+        display: map-get($dpl, n)
     }
-}
 
-.h1-responsive{
-    @extend %TextBox;
-    font-size: 17px !important;
-}
+    .div-index-cocina{
+        display: map-get($dpl, n)
+    }
 
-@media (min-width:576px){
-    .h1-responsive{
-        display: map-get($dpl, n);
-        @extend %TextBox;
+    hr{
+        display: map-get($dpl, n)
+    }
+
+    .contenedor-index{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        justify-content: center;
+        
+    }
+
+    .div-index{
+        width: 100%;
+        p{
+            line-height: 1.5;
+            font-family: 'Agdasima', sans-serif;
+            font-size: 21px;
+            margin-left: 10px;
+            margin-right: 10px;
+        }
+    }
+    
+    .div-index-cocina{
+        width: 90%;
+        p{
+            line-height: 1.5;
+            font-family: 'Agdasima', sans-serif;
+            font-size: 21px;
+            margin-left: 10px;
+            margin-right: 10px;
+        }
+    }
+
+    .img-index-logo{
+        width: 100%;
+        height: 200px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        img{
+            width: 150px;
+            height: 150px;
+        }
+    }
+    
+    .main-index{
+        background: rgb(155,70,31);
+        background: -moz-linear-gradient(0deg, rgba(155,70,31,1) 0%, rgba(222,164,80,1) 80%, rgba(255,255,255,0.5746673669467788) 100%);
+        background: -webkit-linear-gradient(0deg, rgba(155,70,31,1) 0%, rgba(222,164,80,1) 80%, rgba(255,255,255,0.5746673669467788) 100%);
+        background: linear-gradient(0deg, rgba(155,70,31,1) 0%, rgba(222,164,80,1) 80%, rgba(255,255,255,0.5746673669467788) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#9b461f",endColorstr="#ffffff",GradientType=1);
     }
 }
