--- a/scss/componentes/_nosotros.scss
+++ b/scss/componentes/_nosotros.scss
@@ -2,7 +2,12 @@
     display: nth($display, 1);
     height: nth($sizes, 3);
     width: nth($sizes, 2);
-    background-color: rgb(77, 84, 90);
+    background: rgb(155,70,31);
+    background: -moz-linear-gradient(0deg, rgba(155,70,31,1) 0%, rgba(222,164,80,1) 80%, rgba(255,255,255,0.5746673669467788) 100%);
+    background: -webkit-linear-gradient(0deg, rgba(155,70,31,1) 0%, rgba(222,164,80,1) 80%, rgba(255,255,255,0.5746673669467788) 100%);
+    background: linear-gradient(0deg, rgba(155,70,31,1) 0%, rgba(222,164,80,1) 80%, rgba(255,255,255,0.5746673669467788) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#9b461f",endColorstr="#ffffff",GradientType=1);
+
 }
 
 .historia{
@@ -16,11 +21,14 @@
         font-style: nth($f-style, 1);
         font-weight: nth($sizes, 9);
         font-size: nth($sizes, 8);
+        color: nth($color, 8);
     }
     p{
         font-family: 'Cormorant Upright', serif;
         font-weight: 300;
         font-size: nth($sizes, 1);
+        color: nth($color, 8);
+        padding-left: nth($sizes, 1);
     }
 }
 
@@ -33,4 +41,57 @@
         height: 60%;
         width: 90%;
     }
+}
+
+@media (max-width: 576px){
+    .div-nosotros{
+        display: flex;
+        height: 706px;
+        width: 100%;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-content: center;
+        justify-content: center;
+        align-items: center;
+        background: rgb(155,70,31);
+        background: -moz-linear-gradient(0deg, rgba(155,70,31,1) 0%, rgba(222,164,80,1) 80%, rgba(255,255,255,0.5746673669467788) 100%);
+        background: -webkit-linear-gradient(0deg, rgba(155,70,31,1) 0%, rgba(222,164,80,1) 80%, rgba(255,255,255,0.5746673669467788) 100%);
+        background: linear-gradient(0deg, rgba(155,70,31,1) 0%, rgba(222,164,80,1) 80%, rgba(255,255,255,0.5746673669467788) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#9b461f",endColorstr="#ffffff",GradientType=1);
+    }
+
+    .historia{
+        width: 90%;
+        display: nth($display, 1);
+        flex-direction: nth($flexdire, 1);
+        align-items: nth($lugar, 1);
+        justify-content: nth($lugar, 1);
+        h4{
+            font-family: 'Cormorant Upright', serif;
+            font-style: nth($f-style, 1);
+            font-weight: nth($sizes, 9);
+            font-size: nth($sizes, 8);
+            color: nth($color, 8);
+        }
+        p{
+            font-family: 'Cormorant Upright', serif;
+            font-weight: 300;
+            font-size: nth($sizes, 1);
+            color: nth($color, 8);
+            padding-left: nth($sizes, 1);
+        }
+    }
+
+    .nosotros-img{
+        display: nth($display, 1);
+        width: 60%;
+        justify-content: nth($lugar, 1);
+        align-items: nth($lugar, 1);
+        margin-top: 20px;
+        img{
+            height: 100%;
+            width: 100%;
+        }
+    }
+    
 }
