--- a/scss/componentes/_promos.scss
+++ b/scss/componentes/_promos.scss
@@ -1,46 +1,92 @@
 .div-promo{
     @extend %gridpromo;
+    background: rgb(155,70,31);
+    background: -moz-linear-gradient(0deg, rgba(155,70,31,1) 0%, rgba(222,164,80,1) 80%, rgba(255,255,255,0.5746673669467788) 100%);
+    background: -webkit-linear-gradient(0deg, rgba(155,70,31,1) 0%, rgba(222,164,80,1) 80%, rgba(255,255,255,0.5746673669467788) 100%);
+    background: linear-gradient(0deg, rgba(155,70,31,1) 0%, rgba(222,164,80,1) 80%, rgba(255,255,255,0.5746673669467788) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#9b461f",endColorstr="#ffffff",GradientType=1);
+
 }
 
 .img-1{
     grid-area: img1;
-    height: nth($sizes, 2);
+    height: 200px;
+    width: 300px;
+    overflow: hidden;
+    object-fit: cover;
+    margin-top: 30px;
+    img{
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .img-2{
     grid-area: img2;
-    height: nth($sizes, 2);
+    height: 200px;
+    width: 300px;
+    overflow: hidden;
+    object-fit: cover;
+    margin-top: 30px;
+    img{
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .img-3{
     grid-area: img3;
-    height: nth($sizes, 2);
+    height: 200px;
+    width: 300px;
+    overflow: hidden;
+    object-fit: cover;
+    margin-top: 30px;
+    img{
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .img-4{
     grid-area: img4;
-    height: nth($sizes, 2);
+    height: 200px;
+    width: 300px;
+    overflow: hidden;
+    object-fit: cover;
+    margin-top: 30px;
+    img{
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .lista-1{
     grid-area: lista1;
     justify-self: nth($lugar, 5);
+    border: solid 2px rgb(0, 0, 0);
+    width: 90%;
 }
 
 .lista-2{
     grid-area: lista2;
     justify-self: nth($lugar, 5);
+    border: solid 2px rgb(0, 0, 0);
+    width: 90%;
 }
 
 .lista-3{
     grid-area: lista3;
     justify-self: nth($lugar, 5);
     height: 158.98px;
+    border: solid 2px rgb(0, 0, 0);
+    width: 90%;
 }
 
 .lista-4{
     grid-area: lista4;
     justify-self: nth($lugar, 5);
+    border: solid 2px rgb(0, 0, 0);
+    width: 90%;
 }
 
 .texto{
@@ -51,8 +97,15 @@
     font-family: 'Josefin Sans', sans-serif;
     font-size: nth($sizes, 1);
     font-weight: nth($sizes, 9);
-    background-color: nth($color, 3);
+    background-color: nth($color, 8);
     padding: 10px;
+    color: nth($color, 1);
+}
+
+.h1-promo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .no-rem{
@@ -65,11 +118,14 @@
     margin-bottom: 0px !important;
     height: nth($sizes, 2);
     margin: 10px;
+    color: nth($color, 8);
 }
 
 .h6-lista{
-    margin-left: 350px;
-    padding: nth($sizes, 8);
+    display: flex;
+    padding: nth($sizes, 1);
+    justify-content: flex-end;
+    align-items: center;
 }
 
 .p-promos{
@@ -79,4 +135,97 @@
 .promo-img{
     height: 80% !important;
     margin: 10px;
+}
+
+@media(max-width: 576px){
+    .img-1, .img-2, .img-3, .img-4{
+        display: none;
+    }
+
+    .div-promo{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-items: center;
+        align-items: center;
+        justify-content: center;
+        grid-gap: 10px;
+        background: rgb(155,70,31);
+        background: -moz-linear-gradient(0deg, rgba(155,70,31,1) 0%, rgba(222,164,80,1) 80%, rgba(255,255,255,0.5746673669467788) 100%);
+        background: -webkit-linear-gradient(0deg, rgba(155,70,31,1) 0%, rgba(222,164,80,1) 80%, rgba(255,255,255,0.5746673669467788) 100%);
+        background: linear-gradient(0deg, rgba(155,70,31,1) 0%, rgba(222,164,80,1) 80%, rgba(255,255,255,0.5746673669467788) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#9b461f",endColorstr="#ffffff",GradientType=1);        flex-wrap: wrap;
+    }
+
+    .lista-1{
+        grid-area: lista1;
+        justify-self: nth($lugar, 5);
+        border: solid 1px rgb(0, 0, 0);
+        margin: 10px;
+    }
+    
+    .lista-2{
+        grid-area: lista2;
+        justify-self: nth($lugar, 5);
+        border: solid 1px rgb(0, 0, 0);
+        margin: 10px;
+    }
+    
+    .lista-3{
+        grid-area: lista3;
+        justify-self: nth($lugar, 5);
+        height: 158.98px;
+        border: solid 1px rgb(0, 0, 0);
+        margin: 10px;
+    }
+    
+    .lista-4{
+        grid-area: lista4;
+        justify-self: nth($lugar, 5);
+        border: solid 1px rgb(0, 0, 0);
+        margin: 10px;
+    }
+    
+    .texto{
+        grid-area: texto;
+        align-self: nth($lugar, 5);
+        margin-top: 0;
+        margin-right: 0;
+        font-family: 'Josefin Sans', sans-serif;
+        font-size: nth($sizes, 1);
+        font-weight: nth($sizes, 9);
+        background-color: nth($color, 8);
+        padding: 10px;
+        margin: 10px;
+        color: nth($color, 1);
+    }
+    
+    .no-rem{
+        margin-bottom: 0rem !important;
+    }
+
+    .promo-ul{
+        text-decoration: nth($display, 3);
+        list-style-type: nth($display, 3);
+        margin-bottom: 0px !important;
+        height: nth($sizes, 2);
+        margin: 10px;
+        color: nth($color, 8);
+    }
+    
+    .h6-lista{
+        padding: nth($sizes, 1);
+        font-size: 15px;
+    }
+    
+    .p-promos{
+        width: 300px;
+        font-size: 15px;
+    }
+    
+    .promo-img{
+        height: 80% !important;
+        margin: 10px;
+        font-size: 15px;
+    }
 }
