--- a/scss/componentes/_sucursal.scss
+++ b/scss/componentes/_sucursal.scss
@@ -5,6 +5,7 @@
 .text-sucursal{
     @extend %TextBox;
     font-family: 'Josefin Sans', sans-serif;
+    font-style: italic;
     font-weight: nth($sizes, 9);
     font-size: nth($sizes, 8);
 }
