--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,6 +3,7 @@
 @import './abstract/extend';
 @import './abstract/mixin';
 
+@import './componentes/reset';
 @import './componentes/header';
 @import './componentes/footer';
 @import './componentes/index';
