--- a/css/style.css
+++ b/css/style.css
@@ -527,11 +527,11 @@ ul li {
   display: flex;
   height: 706px;
   width: 100%;
-  background: rgb(155, 70, 31);
-  background: -moz-linear-gradient(0deg, rgb(155, 70, 31) 0%, rgb(222, 164, 80) 80%, rgba(255, 255, 255, 0.5746673669) 100%);
-  background: -webkit-linear-gradient(0deg, rgb(155, 70, 31) 0%, rgb(222, 164, 80) 80%, rgba(255, 255, 255, 0.5746673669) 100%);
-  background: linear-gradient(0deg, rgb(155, 70, 31) 0%, rgb(222, 164, 80) 80%, rgba(255, 255, 255, 0.5746673669) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#9b461f",endColorstr="#ffffff",GradientType=1);
+  background-image: url(https://pbs.twimg.com/media/DzXjDxlWkAEmVI2?format=jpg&name=4096x4096);
+  background-color: rgba(0, 0, 0, 0.5);
+  background-blend-mode: multiply;
+  justify-content: center;
+  align-items: center;
 }
 
 .historia {
@@ -546,25 +546,69 @@ ul li {
   font-style: italic;
   font-weight: 600;
   font-size: 30px;
-  color: rgb(0, 0, 0);
+  color: white;
 }
 .historia p {
   font-family: "Cormorant Upright", serif;
   font-weight: 300;
   font-size: 20px;
-  color: rgb(0, 0, 0);
+  color: white;
   padding-left: 20px;
 }
 
-.nosotros-img {
+.div-containerr {
   display: flex;
-  width: 40%;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
+  flex-direction: column;
+  width: 70%;
 }
-.nosotros-img img {
-  height: 60%;
-  width: 90%;
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+label {
+  font-weight: bold;
+  font-family: "Josefin Sans", sans-serif;
+  color: white;
+}
+
+input[type=text],
+input[type=number],
+input[type=tel],
+input[type=email] {
+  width: 100%;
+  padding: 6px;
+  font-size: 7px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=submit] {
+  width: 100%;
+  padding: 8px;
+  font-size: 16px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+.h4-form {
+  font-family: "Cormorant Upright", serif;
+  font-style: italic;
+  font-weight: 600;
+  font-size: 24px;
+  color: white;
 }
 
 @media (max-width: 576px) {
@@ -572,19 +616,14 @@ ul li {
     display: flex;
     height: 706px;
     width: 100%;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-content: center;
+    background-image: url(https://pbs.twimg.com/media/DzXjDxlWkAEmVI2?format=jpg&name=4096x4096);
+    background-color: rgba(0, 0, 0, 0.5);
+    background-blend-mode: multiply;
     justify-content: center;
     align-items: center;
-    background: rgb(155, 70, 31);
-    background: -moz-linear-gradient(0deg, rgb(155, 70, 31) 0%, rgb(222, 164, 80) 80%, rgba(255, 255, 255, 0.5746673669) 100%);
-    background: -webkit-linear-gradient(0deg, rgb(155, 70, 31) 0%, rgb(222, 164, 80) 80%, rgba(255, 255, 255, 0.5746673669) 100%);
-    background: linear-gradient(0deg, rgb(155, 70, 31) 0%, rgb(222, 164, 80) 80%, rgba(255, 255, 255, 0.5746673669) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#9b461f",endColorstr="#ffffff",GradientType=1);
   }
   .historia {
-    width: 90%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -595,24 +634,62 @@ ul li {
     font-style: italic;
     font-weight: 600;
     font-size: 30px;
-    color: rgb(0, 0, 0);
+    color: white;
   }
   .historia p {
     font-family: "Cormorant Upright", serif;
     font-weight: 300;
-    font-size: 20px;
-    color: rgb(0, 0, 0);
+    font-size: 16px;
+    color: white;
     padding-left: 20px;
   }
-  .nosotros-img {
+  .div-containerr {
     display: flex;
-    width: 60%;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    margin-top: 20px;
+    flex-direction: column;
+    width: 70%;
   }
-  .nosotros-img img {
-    height: 100%;
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+  }
+  label {
+    font-weight: bold;
+    font-family: "Josefin Sans", sans-serif;
+    color: white;
+  }
+  input[type=text],
+  input[type=number],
+  input[type=tel],
+  input[type=email] {
+    width: 100%;
+    padding: 6px;
+    font-size: 4px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  input[type=submit] {
+    width: 100%;
+    padding: 8px;
+    font-size: 16px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  input[type=submit]:hover {
+    background-color: #45a049;
+  }
+  .h4-form {
+    font-family: "Cormorant Upright", serif;
+    font-style: italic;
+    font-weight: 600;
+    font-size: 18px;
+    color: white;
     width: 100%;
   }
 }
@@ -917,6 +994,9 @@ ul li {
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+  .map-mobile-sucursal {
+    width: 100%;
   }
 }
 
